hummingbird-api/admin/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hummingbird-admin
  namespace: hummingbird-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hummingbird-admin
  template:
    metadata:
      labels:
        app: hummingbird-admin
    spec:
      containers:
        - name: admin
          image: mpsean/hummingbird-admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hummingbird-admin
  namespace: hummingbird-admin
spec:
  selector:
    app: hummingbird-admin
  ports:
    - port: 80
      targetPort: 80
